# shorthack_cuvent

./: .gitignore  Dockerfile  docker-compose.yml  frontend_api_reference.md  main.py  pyproject.toml  requirements.txt  startup.sh
alembic/: env.py
alembic/versions/: a0d4b6ca0a6d_add_event_curator.py  be31202421d8_second_init_migrations.py  dc205073e94f_init_migration.py
core/: config.py  database.py  dependencies.py  enums.py  security.py  table.py
models/: __init__.py  event.py  moderation.py  notification.py  room.py  user.py
routers/: __init__.py  auth.py  events.py  moderation.py  notifications.py  rooms.py  users.py
schemas/: auth.py  events.py  moderation.py  notifications.py  rooms.py  users.py
services/: auth.py  events.py  exceptions.py  moderation.py  notifications.py  rooms.py  users.py  utils.py
